[project]
name = "audiocraft"
description = "Audio generation research library for PyTorch"
version = "1.3.0"
authors = [
	{name = "FAIR Speech & Audio"},
        {email = "defossez@meta.com"},
        {email = "jadecopet@meta.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8.0"
dependencies = [
"av==11.0.0",
"einops",
"flashy",
"hydra-core>=1.1",
"hydra_colorlog",
"julius",
"num2words",
"numpy",
"sentencepiece",
"spacy==3.7.6",
"torch",
"torchaudio",
"huggingface_hub",
"tqdm",
"transformers",
"xformers<0.0.23",
"demucs",
"librosa",
"soundfile",
"gradio",
"torchmetrics",
"encodec",
"protobuf",
"torchvision",
"torchtext",
"pesq",
"pystoi",
"torchdiffeq",
"encodec",
"pytaglib"
]

[project.urls]
Repository = "https://github.com/facebookresearch/audiocraft"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

