[project]
name = "audiocraft"
description = "Audio generation research library for PyTorch"
version = "1.3.0"
authors = [
	{name = "FAIR Speech & Audio"},
        {email = "defossez@meta.com"},
        {email = "jadecopet@meta.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8.0"
dependencies = [
"av==11.0.0",
"einops",
"flashy",
"hydra-core>=1.1",
"hydra_colorlog",
"julius",
"num2words",
"numpy>=1.26.4,<2.0.0",
"sentencepiece",
"spacy==3.7.6",
"huggingface_hub",
"tqdm",
"transformers",
"xformers>=0.0.22,<0.0.28",
"demucs",
"librosa",
"soundfile",
"gradio",
"torchmetrics",
"encodec",
"protobuf",
"pesq",
"pystoi",
"torchdiffeq",
"encodec",
"pytaglib",
"torch>=2.1.0,<2.5.0",
"torchaudio>=2.0.0,<2.5.0",
"torchvision>=0.16.0,<0.20.0",
"torchtext>=0.16.0,<0.20.0"
]

[project.urls]
Repository = "https://github.com/facebookresearch/audiocraft"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

